...
        android:clipToPadding="false"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:paddingBottom="300dp">

        <LinearLayout
            android:id="@+id/fragment_transaction_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dialog_padding">

            <LinearLayout style="@style/FormRow">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/input_transaction_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:hint="@string/label_transaction_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:nextFocusDown="@+id/input_transaction_amount"
                        android:singleLine="true"
                        android:textAppearance="?android:textAppearanceMedium">

                        <requestFocus />
                    </com.google.android.material.textfield.MaterialAutoCompleteTextView>
                </com.google.android.material.textfield.TextInputLayout>
...

                    <org.gnucash.android.ui.util.widget.CalculatorEditText
                        android:id="@+id/input_transaction_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_transaction_amount"
                        android:nextFocusDown="@+id/notes"
                        android:textColor="@color/debit_red"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <org.gnucash.android.ui.util.widget.TransactionTypeSwitch
                    android:id="@+id/input_transaction_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:checked="false"
                    android:gravity="center_vertical"
                    android:textOff="@string/label_debit"
                    android:textOn="@string/label_credit"
                    android:textSize="14sp"
                    tools:text="@string/label_debit" />

                <ImageView
                    android:id="@+id/btn_split_editor"
                    style="@style/FormIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/title_split_editor"
...

                <ImageView
                    style="@style/FormIcon"
                    android:src="@drawable/ic_account" />

                <Spinner
                    android:id="@+id/input_transfer_account_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp" />
            </LinearLayout>

            <View style="@style/Divider" />
...

                <ImageView
                    style="@style/FormIcon"
                    android:src="@drawable/ic_day" />

                <TextView
                    android:id="@+id/input_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/input_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="4dp" />
            </LinearLayout>
...
