...
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/repeating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/options_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
...
            android:id="@+id/repeating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Repeating"
            android:src="@drawable/ic_repeat"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/edit_transaction"
            app:layout_constraintTop_toTopOf="@id/edit_transaction"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/edit_transaction"
            android:layout_width="wrap_content"
...
