/*
 * Copyright (c) 2012 - 2015 Ngewi Fet <ngewif@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.gnucash.android.test.ui

import android.content.ContentValues
import android.content.Intent
import androidx.core.content.edit
import androidx.test.espresso.Espresso.onData
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.action.ViewActions.clearText
import androidx.test.espresso.action.ViewActions.closeSoftKeyboard
import androidx.test.espresso.action.ViewActions.replaceText
import androidx.test.espresso.action.ViewActions.swipeDown
import androidx.test.espresso.action.ViewActions.typeText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.RootMatchers.isPlatformPopup
import androidx.test.espresso.matcher.ViewMatchers.hasDescendant
import androidx.test.espresso.matcher.ViewMatchers.isChecked
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withParent
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.rule.ActivityTestRule
import org.assertj.core.api.Assertions.assertThat
import org.gnucash.android.R
import org.gnucash.android.app.GnuCashApplication
import org.gnucash.android.db.DatabaseSchema.AccountEntry
import org.gnucash.android.model.Account
import org.gnucash.android.model.Commodity
import org.gnucash.android.model.Money
import org.gnucash.android.model.PeriodType
import org.gnucash.android.model.Recurrence
import org.gnucash.android.model.ScheduledAction
import org.gnucash.android.model.Split
import org.gnucash.android.model.Transaction
import org.gnucash.android.model.TransactionType
import org.gnucash.android.receivers.TransactionRecorder
import org.gnucash.android.test.ui.util.DisableAnimationsRule
import org.gnucash.android.test.ui.util.performClick
import org.gnucash.android.test.ui.util.withTagValue
import org.gnucash.android.ui.common.UxArgument
import org.gnucash.android.ui.transaction.ScheduledActionsActivity
import org.gnucash.android.ui.transaction.TransactionFormFragment.Companion.DATE_FORMATTER
import org.gnucash.android.ui.transaction.TransactionFormFragment.Companion.TIME_FORMATTER
import org.gnucash.android.ui.transaction.TransactionsActivity
import org.gnucash.android.ui.transaction.TransactionsListFragment
import org.gnucash.android.util.set
import org.hamcrest.Matchers.allOf
import org.hamcrest.Matchers.instanceOf
import org.hamcrest.Matchers.`is`
import org.hamcrest.Matchers.not
import org.junit.After
import org.junit.Before
import org.junit.BeforeClass
import org.junit.ClassRule
import org.junit.Rule
import org.junit.Test
import java.math.BigDecimal
import java.text.NumberFormat
import java.util.Locale

class TransactionsActivityTest : DatabaseTest() {
    private lateinit var transaction: Transaction
    private var transactionTimeMillis: Long = 0

    private lateinit var transactionsActivity: TransactionsActivity
    private lateinit var templatesActivity: ScheduledActionsActivity

    @Rule
    @JvmField
    val activityRule = ActivityTestRule(TransactionsActivity::class.java, false, false)

    @Rule
    @JvmField
    val scheduledActionsActivityRule =
        ActivityTestRule(ScheduledActionsActivity::class.java, false, false)

    private lateinit var COMMODITY: Commodity
    private lateinit var baseAccount: Account
    private lateinit var transferAccount: Account

    @Before
    fun setUp() {
        disableAnimationsRule.disable()
        setDoubleEntryEnabled(true)
        setDefaultTransactionType(TransactionType.DEBIT)

        COMMODITY = commoditiesDbAdapter.getCurrency("USD")!!
        accountsDbAdapter.deleteAllRecords()

        baseAccount = Account(TRANSACTIONS_ACCOUNT_NAME, COMMODITY)
        baseAccount.setUID(TRANSACTIONS_ACCOUNT_UID)
        accountsDbAdapter.insert(baseAccount)

        transferAccount = Account(TRANSFER_ACCOUNT_NAME, COMMODITY)
        transferAccount.setUID(TRANSFER_ACCOUNT_UID)
        accountsDbAdapter.insert(transferAccount)

        assertThat(accountsDbAdapter.recordsCount)
            .isEqualTo(3) //including ROOT account

        transactionTimeMillis = System.currentTimeMillis()
        transaction = Transaction(TRANSACTION_NAME)
        transaction.commodity = COMMODITY
        transaction.notes = "What up?"
        transaction.datePosted = transactionTimeMillis
        val split = Split(Money(TRANSACTION_AMOUNT, Commodity.USD), TRANSACTIONS_ACCOUNT_UID)
        split.type = TransactionType.DEBIT

        transaction.addSplit(split)
        transaction.addSplit(split.createPair(TRANSFER_ACCOUNT_UID))

        transactionsDbAdapter.insert(transaction)
        assertThat(transactionsDbAdapter.recordsCount).isOne

        val intent = Intent(Intent.ACTION_MAIN)
            .putExtra(UxArgument.SELECTED_ACCOUNT_UID, TRANSACTIONS_ACCOUNT_UID)
            .putExtra(UxArgument.BOOK_UID, bookUID)
        transactionsActivity = activityRule.launchActivity(intent)

        validateTransactionListDisplayed()
    }

    @After
    fun tearDown() {
        activityRule.finishActivity()
    }

    private fun validateTransactionListDisplayed() {
        val matcher = allOf(
            withId(android.R.id.list),
            withTagValue(TransactionsListFragment.TAG)
        )
        waitForView(matcher)
        onView(matcher).check(matches(isDisplayed()))
        sleep(1000L) // wait for slide animation to finish
    }

    private val transactionCount: Int
        get() = transactionsDbAdapter.getTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID).size

    private fun validateTimeInput(timeMillis: Long) {
        var expectedValue = DATE_FORMATTER.print(timeMillis)

        onView(withId(R.id.input_date))
            .check(matches(withText(expectedValue)))

        expectedValue = TIME_FORMATTER.print(timeMillis)
        onView(withId(R.id.input_time))
            .check(matches(withText(expectedValue)))
    }

    @Test
    fun testAddTransactionShouldRequireAmount() {
        val beforeCount = transactionsDbAdapter.getCountByAccount(TRANSACTIONS_ACCOUNT_UID)

        clickViewId(R.id.fab_add)

        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_name))
            .check(matches(isDisplayed()))
            .perform(typeText("Lunch"))

        closeSoftKeyboard()

        clickViewId(R.id.menu_save)
        onView(withText(R.string.title_add_transaction))
            .check(matches(isDisplayed()))

        assertToastDisplayed(transactionsActivity, R.string.toast_transaction_amount_required)

        val afterCount = transactionsDbAdapter.getCountByAccount(TRANSACTIONS_ACCOUNT_UID)
        assertThat(afterCount).isEqualTo(beforeCount)
    }

    private fun validateEditTransactionFields(transaction: Transaction) {
        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_name))
            .check(matches(withText(transaction.description)))

        val account = accountsDbAdapter.getRecord(TRANSACTIONS_ACCOUNT_UID)
        val balance = transaction.getBalance(account)
        val formatter = NumberFormat.getInstance(Locale.getDefault()).apply {
            minimumFractionDigits = 2
            maximumFractionDigits = 2
        }
        onView(withId(R.id.input_transaction_amount))
            .check(matches(withText(formatter.format(balance.toDouble()))))
        onView(withId(R.id.input_date))
            .check(matches(withText(DATE_FORMATTER.print(transaction.datePosted))))
        onView(withId(R.id.input_time))
            .check(matches(withText(TIME_FORMATTER.print(transaction.datePosted))))
        onView(withId(R.id.notes))
            .check(matches(withText(transaction.notes)))

        validateTimeInput(transaction.datePosted)
    }

    //TODO: Add test for only one account but with double-entry enabled
    @Test
    fun testAddTransaction() {
        setDefaultTransactionType(TransactionType.DEBIT)

        waitForView(R.id.fab_add)
        clickViewId(R.id.fab_add)

        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_name))
            .perform(typeText("Lunch"))
        closeSoftKeyboard()
        onView(withId(R.id.input_transaction_amount))
            .perform(typeText("899"))
        closeSoftKeyboard()
        onView(withId(R.id.input_transaction_type))
            .check(
                matches(
                    allOf(
                        isDisplayed(),
                        withText(R.string.label_receive)
                    )
                )
            )
            .performClick()
            .check(matches(withText(R.string.label_spend)))

        val expectedValue = NumberFormat.getInstance().format(-899)
        onView(withId(R.id.input_transaction_amount))
            .check(matches(withText(expectedValue)))

        val transactionsCount = transactionCount
        clickViewId(R.id.menu_save)

        validateTransactionListDisplayed()

        val transactions = transactionsDbAdapter.getTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID)
        assertThat(transactions).hasSize(2)
        val transaction = transactions[0]
        assertThat(transaction.splits).hasSize(2)

        assertThat(transactionCount).isEqualTo(transactionsCount + 1)
    }

    @Test
    fun testAddMultiCurrencyTransaction() {
        transactionsDbAdapter.deleteTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID)

        val euro = Commodity.EUR
        val euroAccount = Account("Euro Konto", euro)
        accountsDbAdapter.addRecord(euroAccount)

        val transactionCount = transactionsDbAdapter.getCountByAccount(TRANSACTIONS_ACCOUNT_UID)
        setDefaultTransactionType(TransactionType.DEBIT)

        clickViewId(R.id.fab_add)

        val transactionName = "Multicurrency lunch"
        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_name))
            .perform(typeText(transactionName))
        onView(withId(R.id.input_transaction_amount))
            .perform(typeText("10"))
        pressBack() //close calculator keyboard

        clickViewId(R.id.input_transfer_account_spinner)
        clickViewText(euroAccount.fullName)

        //picking a transfer account with another currency shows the transfer funds dialog
        onView(withText(R.string.msg_provide_exchange_rate))
            .check(matches(isDisplayed()))
        clickViewId(R.id.radio_converted_amount)
        onView(withId(R.id.input_converted_amount))
            .perform(typeText("5"))
        closeSoftKeyboard()
        clickViewId(BUTTON_POSITIVE)

        clickViewId(R.id.menu_save)

        val transactions = transactionsDbAdapter.getTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID)
        assertThat(transactions).hasSize(transactionCount + 1)
        val multiTrans = transactions[0]
        assertThat(multiTrans.splits).hasSize(2)
        val accountUID = assertThat(multiTrans.splits).extracting("accountUID", String::class.java)
        accountUID.contains(TRANSACTIONS_ACCOUNT_UID)
        accountUID.contains(euroAccount.uid)

        val euroSplit = multiTrans.getSplits(euroAccount.uid)[0]
        val expectedQty = Money("5", euro)
        val expectedValue = Money(BigDecimal.TEN, Commodity.DEFAULT_COMMODITY)
        assertThat(euroSplit.quantity).isEqualTo(expectedQty)
        assertThat(euroSplit.value).isEqualTo(expectedValue)

        val usdSplit = multiTrans.getSplits(TRANSACTIONS_ACCOUNT_UID)[0]
        assertThat(usdSplit.quantity).isEqualTo(expectedValue)
        assertThat(usdSplit.value).isEqualTo(expectedValue)
    }

    @Test
    fun testEditTransaction() {
        waitForView(R.id.edit_transaction)
        clickViewId(R.id.edit_transaction)

        validateEditTransactionFields(transaction)

        val trnName = "Pasta"
        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_name))
            .perform(clearText(), typeText(trnName))
        clickViewId(R.id.menu_save)

        val editedTransaction = transactionsDbAdapter.getRecord(transaction.uid)
        assertThat(editedTransaction.description).isEqualTo(trnName)
        assertThat(editedTransaction.splits).hasSize(2)

        var split = transaction.getSplits(TRANSACTIONS_ACCOUNT_UID)[0]
        var editedSplit = editedTransaction.getSplits(TRANSACTIONS_ACCOUNT_UID)[0]
        assertThat(split.isEquivalentTo(editedSplit)).isTrue()

        split = transaction.getSplits(TRANSFER_ACCOUNT_UID)[0]
        editedSplit = editedTransaction.getSplits(TRANSFER_ACCOUNT_UID)[0]
        assertThat(split.isEquivalentTo(editedSplit)).isTrue()
    }

    /**
     * Tests that transactions splits are automatically balanced and an imbalance account will be created
     * This test case assumes that single entry is used
     */
    fun testAutoBalanceTransactions() {
        setDoubleEntryEnabled(false)
        transactionsDbAdapter.deleteAllRecords()

        assertThat(transactionsDbAdapter.recordsCount).isZero
        var imbalanceAcctUID = accountsDbAdapter.getImbalanceAccountUID(context, COMMODITY)
        assertThat(imbalanceAcctUID).isNull()

        clickViewId(R.id.fab_add)

        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_name))
            .perform(typeText("Autobalance"))
        onView(withId(R.id.input_transaction_amount))
            .perform(typeText("499"))

        //no double entry so no split editor
        onView(withId(R.id.btn_split_editor))
            .check(matches(not(isDisplayed())))
        clickViewId(R.id.menu_save)

        assertThat(transactionsDbAdapter.recordsCount).isOne
        val transaction = transactionsDbAdapter.allRecords[0]
        assertThat(transaction.splits).hasSize(2)
        imbalanceAcctUID = accountsDbAdapter.getImbalanceAccountUID(context, COMMODITY)
        assertThat(imbalanceAcctUID).isNotNull()
        assertThat(imbalanceAcctUID).isNotEmpty()
        assertThat(accountsDbAdapter.isHiddenAccount(imbalanceAcctUID!!))
            .isTrue() //imbalance account should be hidden in single entry mode

        assertThat(transaction.splits).extracting("accountUID", String::class.java)
            .contains(imbalanceAcctUID)
    }

    /**
     * Tests input of transaction splits using the split editor.
     * Also validates that the imbalance from the split editor will be automatically added as a split
     * //FIXME: find a more reliable way to test opening of the split editor
     */
    @Test
    fun testSplitEditor() {
        setDefaultTransactionType(TransactionType.DEBIT)
        transactionsDbAdapter.deleteAllRecords()

        //when we start there should be no imbalance account in the system
        var imbalanceAcctUID = accountsDbAdapter.getImbalanceAccountUID(context, COMMODITY)
        assertThat(imbalanceAcctUID).isNull()

        clickViewId(R.id.fab_add)

        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_name))
            .perform(typeText("Autobalance"))
        onView(withId(R.id.input_transaction_amount))
            .perform(typeText("499"))
        closeSoftKeyboard()
        clickViewId(R.id.btn_split_editor)

        onView(withId(R.id.split_list_layout))
            .check(
                matches(
                    allOf(
                        isDisplayed(),
                        hasDescendant(withId(R.id.input_split_amount))
                    )
                )
            )

        onView(
            allOf(
                withId(R.id.input_split_amount),
                withText("499")
            )
        ).perform(clearText())
        onView(
            allOf(
                withId(R.id.input_split_amount),
                withText("")
            )
        ).perform(typeText("400"))

        clickViewId(R.id.menu_save)
        //after we use split editor, we should not be able to toggle the transaction type
        onView(withId(R.id.input_transaction_type))
            .check(matches(not(isDisplayed())))

        clickViewId(R.id.menu_save)

        val transactions = transactionsDbAdapter.allRecords
        assertThat(transactions).hasSize(1)

        val transaction = transactions[0]

        assertThat(transaction.splits).hasSize(2) //auto-balanced
        imbalanceAcctUID = accountsDbAdapter.getImbalanceAccountUID(context, COMMODITY)
        assertThat(imbalanceAcctUID).isNotNull()
        assertThat(imbalanceAcctUID).isNotEmpty()
        assertThat(accountsDbAdapter.isHiddenAccount(imbalanceAcctUID!!)).isFalse()

        //at least one split will belong to the imbalance account
        assertThat(transaction.splits).extracting("accountUID", String::class.java)
            .contains(imbalanceAcctUID)

        val imbalanceSplits = splitsDbAdapter.getSplitsForTransactionInAccount(transaction.uid, imbalanceAcctUID)
        assertThat(imbalanceSplits).hasSize(1)

        val split = imbalanceSplits[0]
        assertThat(split.value.toBigDecimal()).isEqualTo(BigDecimal("400.00"))
        assertThat(split.type).isEqualTo(TransactionType.CREDIT)
    }


    @Test
    fun testDefaultTransactionType() {
        setDefaultTransactionType(TransactionType.CREDIT)

        waitForView(R.id.fab_add)
        clickViewId(R.id.fab_add)

        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_type))
            .check(
                matches(
                    allOf(
                        isChecked(),
                        withText(R.string.label_spend)
                    )
                )
            )
    }

    private fun setDefaultTransactionType(type: TransactionType) {
        GnuCashApplication.getBookPreferences(context)
            .edit {
                putString(
                    context.getString(R.string.key_default_transaction_type),
                    type.value
                )
            }
    }

    //FIXME: Improve on this test
    fun childAccountsShouldUseParentTransferAccountSetting() {
        val transferAccount = Account("New Transfer Acct")
        accountsDbAdapter.insert(transferAccount)
        accountsDbAdapter.insert(Account("Higher account"))

        val childAccount = Account("Child Account")
        childAccount.parentUID = TRANSACTIONS_ACCOUNT_UID
        accountsDbAdapter.insert(childAccount)
        val contentValues = ContentValues()
        contentValues[AccountEntry.COLUMN_DEFAULT_TRANSFER_ACCOUNT_UID] = transferAccount.uid
        accountsDbAdapter.updateRecord(TRANSACTIONS_ACCOUNT_UID, contentValues)

        val intent = Intent(transactionsActivity, TransactionsActivity::class.java)
            .addFlags(Intent.FLAG_ACTIVITY_NEW_TASK)
            .setAction(Intent.ACTION_INSERT_OR_EDIT)
            .putExtra(UxArgument.SELECTED_ACCOUNT_UID, childAccount.uid)
        transactionsActivity.startActivity(intent)

        onView(withId(R.id.input_transaction_amount))
            .perform(typeText("1299"))
        clickViewId(R.id.menu_save)

        //if our transfer account has a transaction then the right transfer account was used
        val transactions =
            transactionsDbAdapter.getTransactionsForAccount(transferAccount)
        assertThat(transactions).hasSize(1)
    }

    @Test
    fun testToggleTransactionType() {
        clickViewId(R.id.edit_transaction)

        validateEditTransactionFields(transaction)

        onView(withId(R.id.input_transaction_type))
            .check(
                matches(
                    allOf(
                        isDisplayed(),
                        withText(R.string.label_receive)
                    )
                )
            )
            .performClick()
            .check(matches(withText(R.string.label_spend)))

        onView(withId(R.id.input_transaction_amount))
            .check(matches(withText("-9.99")))

        clickViewId(R.id.menu_save)

        val transactions = transactionsDbAdapter.getTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID)
        assertThat(transactions).hasSize(1)
        val trx = transactions[0]
        assertThat(trx.splits).hasSize(2) //auto-balancing of splits
        val account = accountsDbAdapter.getRecord(TRANSACTIONS_ACCOUNT_UID)
        assertThat(trx.getBalance(account).isNegative).isTrue()
    }

    @Test
    fun testOpenTransactionEditShouldNotModifyTransaction() {
        clickViewId(R.id.edit_transaction)
        validateTimeInput(transactionTimeMillis)

        clickViewId(R.id.menu_save)

        val transactions = transactionsDbAdapter.getTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID)

        assertThat(transactions).hasSize(1)
        val transaction = transactions[0]
        assertThat(TRANSACTION_NAME).isEqualTo(transaction.description)
        val expectedDate = transactionTimeMillis
        val trxDate = transaction.datePosted
        assertThat(DATE_FORMATTER.print(expectedDate))
            .isEqualTo(DATE_FORMATTER.print(trxDate))
        assertThat(TIME_FORMATTER.print(expectedDate))
            .isEqualTo(TIME_FORMATTER.print(trxDate))

        val baseSplit = transaction.getSplits(TRANSACTIONS_ACCOUNT_UID)[0]
        val expectedAmount = Money(TRANSACTION_AMOUNT, Commodity.USD)
        assertThat(baseSplit.value).isEqualTo(expectedAmount)
        assertThat(baseSplit.quantity).isEqualTo(expectedAmount)
        assertThat(baseSplit.type).isEqualTo(TransactionType.DEBIT)

        val transferSplit = transaction.getSplits(TRANSFER_ACCOUNT_UID)[0]
        assertThat(transferSplit.value).isEqualTo(expectedAmount)
        assertThat(transferSplit.quantity).isEqualTo(expectedAmount)
        assertThat(transferSplit.type).isEqualTo(TransactionType.CREDIT)
    }

    @Test
    fun testDeleteTransaction() {
        waitForView(R.id.options_menu)
        clickViewId(R.id.options_menu)
        clickViewText(R.string.menu_delete)

        // wait for backup to finish
        sleep(2000)

        assertThat(transactionsDbAdapter.getCountByAccount(TRANSACTIONS_ACCOUNT_UID)).isZero
    }

    @Test
    fun testMoveTransaction() {
        val account = Account("Move account", COMMODITY)
        accountsDbAdapter.insert(account)

        assertThat(transactionsDbAdapter.getTransactionsForAccount(account)).isEmpty()

        clickViewId(R.id.options_menu)
        clickViewText(R.string.menu_move_transaction)

        clickViewId(BUTTON_POSITIVE)

        assertThat(transactionsDbAdapter.getTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID)).isEmpty()

        assertThat(transactionsDbAdapter.getTransactionsForAccount(account)).hasSize(1)
    }

    /**
     * This test edits a transaction from within an account and removes the split belonging to that account.
     * The account should then have a balance of 0 and the transaction has "moved" to another account
     */
    @Test
    fun editingSplit_shouldNotSetAmountToZero() {
        transactionsDbAdapter.deleteAllRecords()

        val account = Account("Z Account", COMMODITY)
        accountsDbAdapter.insert(account)

        //create new transaction "Transaction Acct" --> "Transfer Account"
        clickViewId(R.id.fab_add)

        waitForView(R.id.fragment_transaction_form)
        onView(withId(R.id.input_transaction_name))
            .perform(typeText("Test Split"))
